fixed problem where animatedtext would still show but topislandui would remain because visibility was used instead of display

--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,6 @@ main {
 }
 
 #topIslandUI {
-  visibility: hidden;
   position: sticky;
   border-radius: 16pt;
   padding: 16pt;
